@@ -1,21 +1,46 @@
 package com.winlator.core;
 
 import android.os.Process;
+import android.system.Os;
+
+import androidx.annotation.NonNull;
+
+import com.winlator.MainActivity;
 
 import java.io.BufferedReader;
 import java.io.File;
+import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.lang.reflect.Field;
 import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
+import java.util.Map;
+import java.util.Scanner;
 import java.util.concurrent.Executors;
+import java.util.regex.Pattern;
 
 public abstract class ProcessHelper {
-    public static final boolean PRINT_DEBUG = false; // FIXME change to false
+    public enum PState {RUNNING, SLEEPING, WAITING, ZOMBIE, STOPPED, DEAD, OTHER}
     private static final ArrayList<Callback<String>> debugCallbacks = new ArrayList<>();
     private static final byte SIGCONT = 18;
     private static final byte SIGSTOP = 19;
+
+    public static class PStat {
+        public int pid = 0;
+        public String name = "";
+        public PState state = PState.OTHER;
+        public int parentPID = 0;
+        public boolean guestProcess = false;
+
+        @NonNull
+        @Override
+        public String toString() {
+            return pid+" "+name+" "+state+" "+parentPID+" "+guestProcess;
+        }
+    }
 
     public static void suspendProcess(int pid) {
         Process.sendSignal(pid, SIGSTOP);
@@ -29,18 +54,24 @@ public abstract class ProcessHelper {
         return exec(command, null);
     }
 
-    public static int exec(String command, String[] envp) {
-        return exec(command, envp, null);
+    public static int exec(String command, EnvVars envVars) {
+        return exec(command, envVars, null);
     }
 
-    public static int exec(String command, String[] envp, File workingDir) {
-        return exec(command, envp, workingDir, null);
+    public static int exec(String command, EnvVars envVars, File workingDir) {
+        return exec(command, envVars, workingDir, null);
     }
 
-    public static int exec(String command, String[] envp, File workingDir, Callback<Integer> terminationCallback) {
+    public static int exec(String command, EnvVars envVars, File workingDir, Callback<Integer> terminationCallback) {
         int pid = -1;
         try {
-            java.lang.Process process = Runtime.getRuntime().exec(splitCommand(command), envp, workingDir);
+            ProcessBuilder processBuilder = (new ProcessBuilder(splitCommand(command))).directory(workingDir);
+            if (debugCallbacks.isEmpty()) processBuilder.redirectOutput(new File("/dev/null")).redirectErrorStream(true);
+
+            Map<String, String> environment = processBuilder.environment();
+            for (String name : envVars) environment.put(name, envVars.get(name));
+
+            java.lang.Process process = processBuilder.start();
             Field pidField = process.getClass().getDeclaredField("pid");
             pidField.setAccessible(true);
             pid = pidField.getInt(process);
@@ -62,11 +93,11 @@ public abstract class ProcessHelper {
             try (BufferedReader reader = new BufferedReader(new InputStreamReader(inputStream))) {
                 String line;
                 while ((line = reader.readLine()) != null) {
-                    if (PRINT_DEBUG) System.out.println(line);
                     synchronized (debugCallbacks) {
                         if (!debugCallbacks.isEmpty()) {
                             for (Callback<String> callback : debugCallbacks) callback.call(line);
                         }
+                        else if (MainActivity.DEBUG_MODE) System.out.println(line);
                     }
                 }
             }
@@ -183,5 +214,71 @@ public abstract class ProcessHelper {
         int affinityMask = 0;
         for (int i = from; i < to; i++) affinityMask |= (int)Math.pow(2, i);
         return affinityMask;
+    }
+
+    public static List<PStat> getChildProcesses() {
+        File procFile = new File("/proc");
+        String[] pids = procFile.list((file, name) -> (new File(file, name)).isDirectory() && name.matches("[0-9]+"));
+        if (pids == null) return Collections.emptyList();
+        ArrayList<PStat> result = new ArrayList<>();
+        int parentPID = Os.getpid();
+
+        for (String pid : pids) {
+            try (Scanner scanner = new Scanner(new FileInputStream("/proc/"+pid+"/stat"))) {
+                PStat pstat = new PStat();
+                int index = 0;
+
+                while (scanner.hasNext() && index < 4) {
+                    switch (index++) {
+                        case 0:
+                            pstat.pid = scanner.nextInt();
+                            break;
+                        case 1:
+                            Pattern oldDelimiter = scanner.delimiter();
+                            scanner.useDelimiter("\\)");
+                            pstat.name = scanner.hasNext() ? scanner.next().substring(2) : "";
+                            scanner.useDelimiter(oldDelimiter);
+                            if (scanner.hasNext()) scanner.next();
+                            break;
+                        case 2: {
+                            switch (scanner.next()) {
+                                case "R":
+                                    pstat.state = PState.RUNNING;
+                                    break;
+                                case "S":
+                                    pstat.state = PState.SLEEPING;
+                                    break;
+                                case "D":
+                                    pstat.state = PState.WAITING;
+                                    break;
+                                case "Z":
+                                    pstat.state = PState.ZOMBIE;
+                                    break;
+                                case "T":
+                                    pstat.state = PState.STOPPED;
+                                    break;
+                                case "X":
+                                    pstat.state = PState.DEAD;
+                                    break;
+                            }
+                            break;
+                        }
+                        case 3:
+                            pstat.parentPID = scanner.nextInt();
+                            break;
+                    }
+                }
+
+                if (pstat.parentPID == parentPID || pstat.pid > parentPID) {
+                    pstat.guestProcess = pstat.name.contains("wine") || pstat.name.contains(".exe");
+                    result.add(pstat);
+                }
+            }
+            catch (Exception e) {
+                return Collections.emptyList();
+            }
+        }
+
+        return result;
     }
 }
